<resources>
    <string name="app_name">GankU</string>
    <string name="title_activity_test">TestActivity</string>
    <string-array name="action_name">
        <item>APP</item>
        <item>Android</item>
        <item>IOS</item>
        <item>Web</item>
        <item>福利</item>
    </string-array>
    <string name="string_app">APP</string>
    <string name="string_android">Android</string>
    <string name="string_ios">IOS</string>
    <string name="string_web">Web</string>
    <string name="string_meizi">福利</string>
    <string name="string_about">about</string>
    <string name="string_about_content">略略略</string>
    <string name="string_load">正在加载。。。</string>
    <string name="menu_share">分享</string>
    <string name="menu_mark">收藏</string>
    <string name="menu_copy">复制剪切板</string>
    <string name="menu_browser">浏览器打开</string>
</resources>
